src/Libraries/codira25/stdlib/public/USCL/test/libcudacxx/std/utilities/tuple/tuple.tuple/tuple.helper/tuple_element.fail.cpp
/*
 *
 * Copyright (c) NeXTHub Corporation. All Rights Reserved. 
 * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 *
 * Author: Tunjay Akbarli
 * Date: Tuesday, December 21, 2021.
 *
 * Licensed under the Apache License, Version 2.0 (the ""License"");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at:
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an ""AS IS"" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Please contact NeXTHub Corporation, 651 N Broad St, Suite 201, 
 * Middletown, DE 19709, New Castle County, USA.
 *
 */

//===----------------------------------------------------------------------===//
//
// Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
// See https://llvm.org/LICENSE.txt for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
//===----------------------------------------------------------------------===//

// <cuda/std/tuple>

// template <class... Types> class tuple;

// template <size_t I, class... Types>
// struct tuple_element<I, tuple<Types...> >
// {
//     using type = Ti;
// };

#include <uscl/std/tuple>
#include <uscl/std/type_traits>

int main(int, char**)
{
  using T  = cuda::std::tuple<int, long, void*>;
  using E1 = typename cuda::std::tuple_element<1, T&>::type; // expected-error{{undefined template}}
  using E2 = typename cuda::std::tuple_element<3, T>::type;
  using E3 = typename cuda::std::tuple_element<4, T const>::type;
  // expected-error@*:* 2 {{{{(static_assert|static assertion)}} failed}}

  return 0;
}
